# Data-Engineering-Project-06

./: Dockerfile  README.md  requirements.txt
.astro/: config.yaml
PowerBI/: Project_05.pbix
dags/: project6.py
dags/dbt/: .gitignore  pyproject.toml
dags/dbt/project_dbt/: dbt_project.yml  profiles.yml
dags/dbt/project_dbt/models/marts/: dim_categories.sql  dim_categories.yml  dim_customers.sql  dim_customers.yml  dim_employees.sql  dim_employees.yml  dim_products.sql  dim_products.yml  dim_shippers.sql  dim_shippers.yml  dim_suppliers.sql  dim_suppliers.yml  fact_orders.sql  fact_orders.yml
dags/dbt/project_dbt/models/staging/: stg_categories.sql  stg_categories.yml  stg_customers.sql  stg_customers.yml  stg_employees.sql  stg_employees.yml  stg_fact_orders.sql  stg_order_details.sql  stg_order_details.yml  stg_orders.sql  stg_orders.yml  stg_products.sql  stg_products.yml  stg_shippers.sql  stg_shippers.yml  stg_suppliers.sql  stg_suppliers.yml
