[tool.poetry]
name = "data-engineering-project-05"
version = "0.1.0"
description = ""
authors = ["Gustavo Souza"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dbt-core = "^1.7.4"
dbt-bigquery = "^1.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
